# abgespaced

./: .gitignore  Cargo.toml  nearby.json  search.json
.github/: FUNDING.yml
bahn_definitions/: .graphqlconfig  nearby.graphql  schema.graphql  search.graphql
src/: api_provider.rs  bahnapi.rs  main.rs  spaceapi.rs
