[package]
name = "abgespaced"
version = "0.1.0"
authors = ["Marcel <marcel@radzio-sh.de>"]
edition = "2018"

[dependencies]
graphql_client = "0.8.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "^0.9.0"
failure = "*"
juniper = "0.13.0"
juniper_rocket = "0.4.0"
rocket = "0.4.0"
log = "0.4.7"
env_logger = "0.6.2"